--- a/newsapi/Cargo.toml
+++ b/newsapi/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 ureq = "2.1.1"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+thiserror = "1.0.30"
