--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ repository = "https://github.com/wildcommunist/clinews"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-colour = "0.6.0"
+termimad = "0.14.2"
+crossterm = "0.20.0"
 thiserror = "1.0.30"
 dotenv = "0.15.0"
 newsapi = { path = "./newsapi" }
