--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["WildCommunist <alex@ceres.ventures>"]
 description = "A simple CLI client that reads news headlines from newsapi"
 readme = "README.md"
 repository = "https://github.com/wildcommunist/clinews"
+license = "Apache 2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
