--- a/newsapi/Cargo.toml
+++ b/newsapi/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ureq = "2.1.1"
+ureq = {version="2.1.1", features=["json"]}
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 thiserror = "1.0.30"
+url = "2.2.2"
